# tabletop

./: 10.tabletop.buildspace.all.in  CHANGELOG.rst  CMakeLists.txt  README  db_plugin.xml  genindex.html  index.html  manifest.xml  objects.inv  package.xml  search.html  searchindex.js  setup.py  stack.xml  stack.yaml
action/: TabletopTable.action
apps/: plane.py
conf/: config_detection.tabletop_object  config_detection.tabletop_table  detection.object.ork  detection.object.ros.ork  detection.table.ork  detection.table.ros.ork
doc/source/: conf.py  index.rst
include/object_recognition_tabletop/: household.h
include/pcl/: pcl_config.h  pcl_macros.h  point_cloud.h  point_traits.h  point_types.h
include/pcl/common/: eigen.h
include/pcl/filters/: voxel_grid.h
include/pcl/impl/: instantiate.hpp  point_types.hpp
include/pcl/segmentation/: plane_coefficient_comparator.h
include/tabletop/object/: tabletop_object_detector.h
include/tabletop/table/: tabletop_segmenter.h
include/tabletop_object_detector/: exhaustive_fit_detector.h  icp_registration_fitter.h  iterative_distance_fitter.h  marker_generator.h  model_fitter.h
launch/: table.launch  tabletop.launch
msg/: TableArray.msg  TabletopDetectionResult.msg
python/: CMakeLists.txt
python/object_recognition_tabletop/: __init__.py  db.py  detector.py  table_publisher.py  table_visualizer.py
python/tabletop/: __init__.py  db.py  detector.py  table_publisher.py
src/: CMakeLists.txt
src/db/: CMakeLists.txt  db_mesh.cpp  db_mesh.h  db_sql_household.cpp  db_sql_household.h  module_python.cpp  wrap_object_db.cpp
src/object/: CMakeLists.txt  ObjectMsgAssembler.cpp  ObjectRecognizer.cpp  db_mesh.cpp  db_mesh.h  db_sql_household.cpp  db_sql_household.h  iterative_distance_fitter.cpp  marker_generator.cpp  model_fitter.cpp  module.cpp  point_cloud2_proxy.h  tabletop_object_recognition.cpp  tabletop_segmentation.cpp
src/object/assimp/code/: BlenderLoader.cpp  CMakeLists.txt  ColladaLoader.cpp  ColladaParser.cpp  IFCGeometry.cpp  IFCLoader.cpp  IFCReaderGen.cpp  IFCReaderGen.h  IFCUtil.cpp  IFCUtil.h  OgreImporter.cpp  OgreMaterial.cpp  OgreMesh.cpp  STEPFileReader.cpp  STLLoader.cpp  XFileImporter.cpp
src/object/assimp/contrib/poly2tri/poly2tri/sweep/: sweep.cc
src/object/assimp/include/assimp/: defs.h  types.h
src/object/impl/: point_cloud2_proxy.h
src/pcl/: CMakeLists.txt  extract_clusters.cpp  extract_polygonal_prism_data.cpp  sac_segmentation.cpp  seeded_hue_segmentation.cpp  segment_differences.cpp
src/publisher/: CMakeLists.txt  ecto_tabletop.cpp  wrap_tabletop_TableArray.cpp
src/table/: CMakeLists.txt  ClusterDrawer.cpp  Clusterer.cpp  ConvexHull.cpp  TableDetector.cpp  TableFinder.cpp  TableMsgAssembler.cpp  TablePose.cpp  TablePublisher.cpp  TableVisualizationMsgAssembler.cpp  module.cpp  plane.cpp  tabletop_segmenter.cpp  tabletop_segmenter.h
test/: CMakeLists.txt
