<package>
  <name>object_recognition_tabletop</name>
  <version>0.2.11</version>
  <description>A port of the old tabletop object recognition</description>
  <author>Marius Muja</author>
  <author email="vrabaud@willowgarage.com">Vincent Rabaud</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <maintainer email="jbinney@willowgarage.com">Jon Binney</maintainer>
  <license>BSD</license>

  <url>http://ecto.willowgarage.com</url>

  <build_depend>ecto</build_depend>
  <build_depend>ecto_pcl</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>object_recognition_core</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>sql_database</build_depend>

  <run_depend>ecto</run_depend>
  <run_depend>ecto_pcl</run_depend>
  <run_depend>object_recognition_core</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>sql_database</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
